# pipeline

./: .gitignore  CONTRIBUTING.md  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
pipeline_engine/: __init__.py  bridge.py  dag.py  db.py  engine.py  errors.py  expressions.py  healing.py  models.py  nodes.py
src/: index.ts
tests/: test_pipeline.py
