[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-engine"
version = "0.1.0"
description = "n8n-style workflow engine with LLM self-healing for AI agent platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yantrikos"}]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/yantrikos/pipeline"

[project.scripts]
pipeline = "pipeline_engine.bridge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_engine*"]
